# SmartRubbishBin

./: .gitignore  Makefile  README.md
Arduino/: Arduino.ino  config.hpp  console.hpp  constants.hpp  motor.hpp
CarModel/: 侧板2.SLDPRT  侧面板.SLDPRT  侧面板2.SLDPRT  倾倒杆2.SLDPRT  倾倒杆（叉车）.SLDPRT  垃圾桶2.0.SLDASM  塞打螺栓.SLDPRT  完整机构.SLDASM  小车底板(3d打印二层）.SLDPRT  小车底板.SLDPRT  底座.SLDPRT  底板.SLDPRT  接头T1.SLDPRT  推动承杆.SLDPRT  推动杆.SLDPRT  推杆支撑.SLDPRT  杆.SLDPRT  滑槽板（中间）.SLDPRT  滑槽板（内侧）.SLDPRT  滑槽板（外侧）.SLDPRT  滑槽板（最外））.SLDPRT  角铁1.SLDPRT  角铁2.SLDPRT  连杆2.SLDPRT  钢扁管（x2）.SLDPRT  钢管.SLDPRT
ROS/src/Example/: CMakeLists.txt  package.xml
ROS/src/Example/src/: eg.cpp
ROS/src/opencv/: CMakeLists.txt
ROS/src/opencv/src/: imgPublisher.cpp  yolo.cpp
ROS/src/server/: CMakeLists.txt  package.xml
ROS/src/server/src/: keyop.cpp  server.cpp
Tutorial/: Git协作开发指南.md  ROS.md  ROS功能包管理命令.md  ROS文件结构.md  ROS计算图.md
Tutorial/Git/: GITignore文件编写方法.md
Tutorial/ROS/: ROS计算图.md  串口通信规范.md
navigation_ws/devel/: .catkin  .rosinstall
navigation_ws/devel/include/amcl/: AMCLConfig.h
navigation_ws/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
navigation_ws/devel/include/global_planner/: GlobalPlannerConfig.h
navigation_ws/devel/lib/amcl/: amcl
navigation_ws/devel/lib/base_local_planner/: point_grid
navigation_ws/devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
navigation_ws/devel/lib/fake_localization/: fake_localization
navigation_ws/devel/lib/global_planner/: planner
navigation_ws/devel/lib/lsn10/: lsn10
navigation_ws/devel/lib/map_server/: map_saver  map_server  rtest
navigation_ws/devel/lib/move_base/: move_base
navigation_ws/devel/lib/navfn/: navfn_node
navigation_ws/devel/lib/pkgconfig/: amcl.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  fake_localization.pc  global_planner.pc  gmapping.pc  lsn10.pc  map_server.pc  move_base.pc  move_slow_and_clear.pc  nav_core.pc  navfn.pc  rotate_recovery.pc  tf.pc  voxel_grid.pc
navigation_ws/devel/lib/tf/: contact_arduino  keyop
navigation_ws/devel/share/amcl/cmake/: amclConfig.cmake
navigation_ws/devel/share/base_local_planner/cmake/: base_local_planner-msg-extras.cmake  base_local_planner-msg-paths.cmake  base_local_plannerConfig.cmake
navigation_ws/src/gmapping/: CMakeLists.txt
navigation_ws/src/gmapping/src/: slam_gmapping  slam_gmapping_replay
navigation_ws/src/tf/: CMakeLists.txt
navigation_ws/src/tf/src/: server.cpp  teleop_turtle_key.cpp
ros/: 123.ino
ros/devel/: .catkin  .rosinstall  setup.sh
ros/devel/lib/Example/: Example_node  eg.py
ros/devel/lib/pkgconfig/: Example.pc
ros/src/Example/: CMakeLists.txt  package.xml
ros/src/Example/launch/: do3thing
ros/src/Example/src/: eg.cpp
ros/src/contact_arduino/: CMakeLists.txt  package.xml
ros/src/contact_arduino/src/: server.cpp
ros/src/opencv/: CMakeLists.txt  package.xml
ros/src/opencv/src/: grayImage.cpp  imgPublisher.cpp
ros/src/server/: CMakeLists.txt
(+27 files in other folders)
